docs(README): remove troubleshooting section as minimum Java version is 17